# PythonExtensionPatterns

./: .gitignore  .project  .pydevproject  .readthedocs.yaml  CMakeLists.txt  HISTORY.rst  INSTALL.rst  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  TODO.md  build_all.sh  requirements.txt  requiriments.txt  setup.py
PythonExtensionPatterns.bbprojectd/: paulross.bbprojectsettings  project.bbprojectdata
PythonExtensionPatterns/PythonExtensionPatterns/: PythonExtensionPatterns.1  PythonExtensionPatterns.c  main.c
PythonExtensionPatterns/PythonExtensionPatterns.xcodeproj/: project.pbxproj
PythonExtensionPatterns/PythonExtensionPatterns.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PythonExtensionPatterns/PythonExtensionPatterns.xcodeproj/project.xcworkspace/xcshareddata/: PythonExtensionPatterns.xccheckout
PythonExtensionPatterns/PythonExtensionPatterns.xcodeproj/project.xcworkspace/xcuserdata/engun.xcuserdatad/: UserInterfaceState.xcuserstate
PythonExtensionPatterns/PythonExtensionPatterns.xcodeproj/project.xcworkspace/xcuserdata/paulross.xcuserdatad/: UserInterfaceState.xcuserstate
PythonExtensionPatterns/PythonExtensionPatterns.xcodeproj/xcuserdata/engun.xcuserdatad/xcschemes/: xcschememanagement.plist
PythonExtensionPatterns/PythonExtensionPatterns.xcodeproj/xcuserdata/paulross.xcuserdatad/xcschemes/: PythonExtensionPatterns.xcscheme  xcschememanagement.plist
doc/presentations/: ReadMe.md
doc/sphinx/: Makefile
doc/sphinx/source/: HISTORY.rst  _headings.rst  _index_styles.rst  canonical_function.rst  capsules.rst  code_layout.rst  compiler_flags.rst  conf.py  containers_and_refcounts.rst  context_manager.rst  cpp.rst  cpp_and_buffer_protocol.rst  cpp_and_cpython.rst  cpp_and_numpy.rst  cpp_and_placement_new.rst  cpp_and_unicode.rst  exceptions.rst  files.rst  further_reading.rst  generators.rst  headings.rst  index.rst  install.rst  introduction.rst  iterators_generators.rst  logging.rst  memory_leaks.rst  miscellaneous.rst  module_globals.rst  new_types.rst  parsing_arguments.rst  pickle.rst  refcount.rst  refcount_and_containers.rst  simple_example.rst  struct_sequence.rst  subclassing_and_super_call.rst  super_call.rst  thread_safety.rst  todo.rst  (+2 more)
doc/sphinx/source/cpp/: cpp_and_buffer_protocol.rst  cpp_and_cpython.rst  cpp_and_numpy.rst  cpp_and_unicode.rst
doc/sphinx/source/debugging/: debug.rst  debug_in_ide.rst  debug_python.rst  debug_tactics.rst  debug_tools.rst  gcov.rst  leak_newrefs_vg.rst  pyatexit.rst  valgrind.rst
doc/sphinx/source/memory_leaks/: introduction.rst  pymemtrace.rst  techniques.rst  tools.rst
src/: FaultHandlerExample.py  build.sh  cCanonical.c  cExcep.c  cModuleGlobals.c  cPyRefs.c  main.c  memleak.py  pidmon.py  scratch.c  setup.py
src/cPyRefs.so.dSYM/Contents/: Info.plist
src/cpy/: cExceptions.c  cFile.c  cModuleGlobals.c  cObject.c  cObjmodule.c  cParseArgs.c  cParseArgsHelper.cpp  cPyRefs.c  pyextpatt_util.c  pyextpatt_util.h
src/cpy/Capsules/: custom_capsule.c  custom_capsule.h  custom_use.c  datetimetz.c  spam.c  spam_capsule.c  spam_capsule.h  spam_client.c
src/cpy/Containers/: DebugContainers.c  DebugContainers.h
src/cpy/CtxMgr/: cCtxMgr.c
src/cpy/Exceptions/: cExceptions.c
src/cpy/File/: PythonFileWrapper.cpp  PythonFileWrapper.h  cFile.cpp
src/cpy/Generators/: cGenerator.c  cGenerator.cpp
src/cpy/Iterators/: cIterator.c
src/cpy/Logging/: cLogging.c
src/cpy/ModuleGlobals/: cModuleGlobals.c
src/cpy/Object/: cSeqObject.c
src/cpy/ParseArgs/: cParseArgs.c  cParseArgsHelper.cpp
src/cpy/Pickle/: cCustomPickle.c
src/cpy/RefCount/: cPyRefs.c  cRefCount.c
src/cpy/SimpleExample/: cFibA.c  cFibA.h  cFibB.c  pFibA.py  pFibB.py  timeit_test.py
src/cpy/StructSequence/: cStructSequence.c
src/cpy/SubClass/: sublist.c
src/cpy/Threads/: cThreadLock.h  cppsublist.cpp  csublist.c  sublist.cpp
src/cpy/Util/: py_call_super.c  py_call_super.cpp  py_call_super.h
src/cpy/Watchers/: DictWatcher.c  DictWatcher.h  cWatchers.c  watcher_example.py
src/cpy/cpp/: CppCtorDtorInPyObject.cpp  cUnicode.cpp  placement_new.cpp
src/debugging/XcodeExample/PythonSubclassList/PythonSubclassList/: SubclassList.c  SubclassList.h  main.c  py_call_super.c  py_call_super.h  py_import_call_execute.h  setup.py  test_sclist.py
src/debugging/XcodeExample/PythonSubclassList/PythonSubclassList.xcodeproj/: project.pbxproj
src/debugging/XcodeExample/PythonSubclassList/PythonSubclassList.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/debugging/XcodeExample/PythonSubclassList/PythonSubclassList.xcodeproj/project.xcworkspace/xcshareddata/: PythonSubclassList.xccheckout
src/debugging/XcodeExample/PythonSubclassList/PythonSubclassList.xcodeproj/project.xcworkspace/xcuserdata/paulross.xcuserdatad/: UserInterfaceState.xcuserstate
src/debugging/XcodeExample/PythonSubclassList/PythonSubclassList.xcodeproj/xcuserdata/paulross.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/debugging/XcodeExample/PythonSubclassList/PythonSubclassList.xcodeproj/xcuserdata/paulross.xcuserdatad/xcschemes/: PythonSubclassList.xcscheme  xcschememanagement.plist
tests/unit/: test_c_capsules.py  test_c_cpp.py  test_c_ctxmgr.py  test_c_custom_pickle.py  test_c_exceptions.py  test_c_file.py  test_c_generators.py  test_c_iterators.py  test_c_logging.py  test_c_module_globals.py  test_c_object.py  test_c_parse_args.py  test_c_parse_args_helper.py  test_c_py_refs.py  test_c_ref_count.py  test_c_seqobject.py  test_c_simple_example.py  test_c_struct_sequence.py  test_c_subclass.py  test_c_threads.py
type_objects/: Python_3.10.1.h  Python_3.11.1.h  Python_3.12.1.h  Python_3.13.0b3.h  Python_3.6.2.h  Python_3.7.1.h  Python_3.8.3.h  Python_3.8.6.h  Python_3.9.0.h  README.md
